implemented assign, array access, var Exp, char, str, and part of addrGen, plus fix small bug in memAlloc, better implementation of print_i