@@ -125,6 +125,7 @@ public class ExprCodeGen extends CodeGen {
                 // need to modify print_s cause for now may not cover all cases
                 // only dummy one where we directly pass str with type cast
                 if (fctExp.fctName.equals("print_s")){
+                    // Register param = visit(fctExp.params.getFirst());
                     switch (fctExp.params.get(0)){
                         case TypecastExpr p -> {
                             switch (p.expr){
@@ -148,14 +149,10 @@ public class ExprCodeGen extends CodeGen {
                     yield  null;
                 }
                 if (fctExp.fctName.equals("print_i")){
-                    switch (fctExp.params.get(0)){
-                        case IntLiteral intLiteral -> {
-                            text.emit(OpCode.ADDI, Register.Arch.a0, Register.Arch.zero, intLiteral.i);
-                            text.emit(OpCode.ADDI, Register.Arch.v0, Register.Arch.zero, 1);
-                            text.emit(OpCode.SYSCALL);
-                        }
-                        default -> {}
-                    }
+                    Register param = visit(fctExp.params.getFirst());
+                    text.emit(OpCode.ADD, Register.Arch.a0, Register.Arch.zero, param);
+                    text.emit(OpCode.ADDI, Register.Arch.v0, Register.Arch.zero, 1);
+                    text.emit(OpCode.SYSCALL);
                     yield  null;
                 }
                 if (fctExp.fctName.equals("print_c")){
@@ -171,15 +168,103 @@ public class ExprCodeGen extends CodeGen {
                 }
                 yield  null;
             }
-            case StrLiteral str -> {yield  null;}
-            case ChrLiteral Char -> {yield  null;}
-            case VarExpr var -> {yield  null;}
-            case ArrayAccessExpr arr -> {yield  null;}
-            case FieldAccessExpr field -> {yield  null;}
+            case StrLiteral str -> {
+                AssemblyProgram.Section newData = asmProg.newSection(AssemblyProgram.Section.Type.DATA);
+                Label label = Label.create();
+                newData.emit(label);
+                newData.emit(new Directive("asciiz \"" + str.id +"\""));
+                AssemblyProgram.Section newText = asmProg.newSection(AssemblyProgram.Section.Type.TEXT);
+                text = newText;
+                Register resReg = Register.Virtual.create();
+                text.emit(OpCode.LA, resReg, label);
+                yield resReg;
+                // we then use move to copy address from here to another register
+            }
+            case ChrLiteral Char -> {
+                Register resReg = Register.Virtual.create();
+                text.emit(OpCode.LI, resReg, Char.character);
+                yield resReg;
+            }
+            case VarExpr var -> {
+                // check if in static memory
+                if (var.vd.lable != null){
+                    Register result = Register.Virtual.create();
+                    text.emit(OpCode.LA, result, var.vd.lable);
+                    switch (var.type){
+                        case BaseType baseType -> {
+                            if (baseType == BaseType.CHAR){
+                                text.emit(OpCode.LB, result, result, 0);
+                            }
+                            if (baseType == BaseType.INT){
+                                text.emit(OpCode.LW, result, result, 0);
+                            }
+                        }
+                        default -> {}
+                    }
+                    yield result;
+                }
+                // need to implement case when var is in stack
+                yield  null;
+            }
+            case ArrayAccessExpr arr -> {
+                Register address = visit(arr.array);
+                Register index = visit(arr.index);
+                Register size = Register.Virtual.create();
+                Register offset = Register.Virtual.create();
+
+                // we load into size the size of each element of the array
+                text.emit(OpCode.ADDI, size, Register.Arch.zero, arr.type.size());
+                text.emit(OpCode.MULT, index, size);
+
+                // we set offset to the result of index * size[elmt]
+                text.emit(OpCode.MFLO, offset);
+
+                // we add offset to the address given to make it point where we want
+                text.emit(OpCode.ADD, address, address, offset);
+
+                Register result = Register.Virtual.create();
+                // if it's a char we only load 1 bite
+                if (arr.type == BaseType.CHAR){
+                    text.emit(OpCode.LB, result, address, 0);
+                }
+                // or it's an int so we return it
+                if (arr.type == BaseType.INT){
+                    text.emit(OpCode.LW, result, address, 0);
+                }
+                // else it's an array or struct type, so we return the address
+                else
+                    result = address;
+                yield result;
+            }
+            case FieldAccessExpr field -> {
+
+                yield  null;
+            }
             case ValueAtExpr value -> {yield  null;}
             case AddressOfExpr address -> {yield  null;}
             case TypecastExpr typeCast -> {yield  null;}
-            case Assign assign -> {yield  null;}
+            case Assign assign -> {
+                // need to load address of lhs if it's an int or char
+                Register rhs = visit(assign.rhs);
+                if (assign.type == BaseType.INT){
+                    Register lhs = new AddrCodeGen(asmProg).visit(assign.lhs);
+                    text.emit(OpCode.SW, rhs, lhs, 0);
+
+                } else if (assign.type == BaseType.CHAR){
+                    Register lhs = new AddrCodeGen(asmProg).visit(assign.lhs);
+                    text.emit(OpCode.SB, rhs, lhs, 0);
+                } else {
+                    // if it's a struct/ array we pass their address so its fine
+                    Register lhs = visit(assign.lhs);
+                    int sizeAssign = assign.type.size();
+                    Register biteCopy = Register.Virtual.create();
+                    for (int i = 0; i < sizeAssign; i++) {
+                        text.emit(OpCode.LB, biteCopy, rhs, i);
+                        text.emit(OpCode.SB, biteCopy, lhs, i);
+                    }
+                }
+                yield null;
+            }
 
         };
     }
